# tmp_logger_fltk

./: .gitignore  README.md
src/: CMakeLists.txt
src/main/: CMakeLists.txt  HeatersTable.cpp  SensorsTable.cpp  main.cpp
src/main/ui/: CMakeLists.txt  main.fl  main_window.fl
src/server/: CMakeLists.txt  server.cpp  server.h
